...
            name="vm"
            type="com.paypay.paypaytest.presentation.viewmodel.RowViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setBackground="@{vm.color}">

        <TextView
            android:id="@+id/tv_country"
...
